# HellfireControl

./: .gitignore  CMakeLists.txt  README.md
Assets/: asset_manifest.hcman
Assets/Fonts/TestOutput/: Envy_Code_R.hcgrf  Envy_Code_R12.hcgrf  JetBrainsMono-Bold.hcgrf  JetBrainsMono-Bold15.hcgrf  RobotoSlab-Bold.hcgrf  RobotoSlab-Bold60.hcgrf  arial.hcgrf  arial32.hcgrf  calibri.hcgrf  calibri12.hcgrf  sniglet12.hcgrf
Assets/Shaders/: compile-vulkan.bat
Assets/Shaders/Vulkan/: test_frag.spv
Athena/: CMakeLists.txt
Athena/src/Athena/: Athena.cpp  Main.cpp
Athena/src/Athena/Core/: TestBlock.cpp  TestBlock.hpp  TestCase.cpp  TestCase.hpp  UnitTesterApplication.cpp  UnitTesterApplication.hpp  Util.cpp  Util.hpp
Athena/src/Athena/Tests/: TestMath.hpp  Tests.cpp  Tests.hpp
Athena/src/Athena/Tests/Inits/: Math.hpp
Athena/src/Athena/Tests/Inits/MathInits/: Math_Common.hpp  Matrix.hpp  Miscellaneous.hpp  Quaternion.hpp  Random.hpp  Rotor.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp
HellfireControl/: CMakeLists.txt
HellfireControl/src/HellfireControl/Asset/: Asset.hpp  AssetCommon.hpp  AssetLoader.cpp  AssetLoader.hpp  AssetManager.cpp  AssetManager.hpp  AssetManifest.cpp  AssetManifest.hpp  Font.cpp  Font.hpp  GUID.cpp  GUID.hpp  HCUID.cpp  HCUID.hpp  Material.cpp  Mesh.cpp  Mesh.hpp  Texture.cpp  Texture.hpp
HellfireControl/src/HellfireControl/Asset/Converters/Font/: FontCommon.hpp  FontParser.cpp  FontParser.hpp  FontProcessor.cpp  FontProcessor.hpp  FontRasterizer.cpp  FontRasterizer.hpp
HellfireControl/src/HellfireControl/Core/: Application.cpp  Application.hpp  Common.hpp  Console.cpp  Console.hpp  File.cpp  File.hpp  Image.cpp  Image.hpp  Memory.cpp  Memory.hpp  Window.cpp  Window.hpp
HellfireControl/src/HellfireControl/Core/Memory/: BlockAllocator.cpp  BlockAllocator.hpp  HeapAllocator.cpp  HeapAllocator.hpp  PoolAllocator.cpp  PoolAllocator.hpp  StackAllocator.cpp  StackAllocator.hpp
HellfireControl/src/HellfireControl/Math/: HCMathBase.hpp  HCMatrix.hpp  HCQuaternion.hpp  Math.cpp  Math.hpp  Matrix.hpp  Quaternion.hpp  Random.hpp  Rotor.hpp  Vector.hpp
HellfireControl/src/HellfireControl/Math/Internal/: Math.cpp  Matrix_Common.hpp  Matrix_D.hpp  Matrix_F.hpp  Quaternion_Common.hpp  Quaternion_D.hpp  Quaternion_F.hpp  Rotor_D.hpp  Rotor_F.hpp  Vector2_D.hpp  Vector2_F.hpp  Vector3_D.hpp  Vector3_F.hpp  Vector4_D.hpp  Vector4_F.hpp  Vector_Common.hpp
HellfireControl/src/HellfireControl/Math/Internal/Matrix/: Matrix_Common.hpp  Matrix_D.hpp  Matrix_F.hpp
HellfireControl/src/HellfireControl/Math/Internal/Quaternion/: Quaternion_D.hpp  Quaternion_F.hpp
HellfireControl/src/HellfireControl/Math/Internal/Random/: Random.cpp  Random_Common.hpp
HellfireControl/src/HellfireControl/Math/Internal/Rotor/: Rotor_Common.hpp  Rotor_D.hpp  Rotor_F.hpp
HellfireControl/src/HellfireControl/Math/Internal/Vector/: Vector2_D.hpp  Vector2_F.hpp  Vector2_I.hpp  Vector3_D.hpp  Vector3_F.hpp  Vector4_D.hpp  Vector4_F.hpp  Vector_Common.hpp
HellfireControl/src/HellfireControl/Render/: Buffer.cpp  Buffer.hpp  RenderContext.cpp  RenderContext.hpp  RenderManager.hpp  Renderer.cpp  Renderer.hpp
HellfireControl/src/HellfireControl/UI/: FileDialog.cpp  FileDialog.hpp  Interactable.cpp  Interactable.hpp  SDF.cpp  SDF.hpp  UI.cpp  UI.hpp
HellfireControl/src/HellfireControl/Util/: SerializableObject.hpp  Util.cpp  Util.hpp
HellfireControl/src/Platform/: GLCommon.hpp  GLInclude.hpp  OSCommon.hpp  OSInclude.hpp
HellfireControl/src/Platform/Linux/: Linux.cmake  get_latest_vulkan_tarball.py  install_vulkan.sh
HellfireControl/src/Platform/Mac/: App.swift  MacOS.cmake  MacTerminal.hpp  MacTerminal.mm  MacWindow.hpp  MacWindow.mm  create_module_map.sh  env  get_latest_vulkan_dmg.py  info.plist  install_vulkan.sh
HellfireControl/src/Platform/OpenGL/: OpenGL.cmake
HellfireControl/src/Platform/Vulkan/: README.txt  VkBuffer.cpp  VkBuffer.hpp  VkCore.cpp  VkCore.hpp  VkInit.cpp  VkInit.hpp  VkRenderContext.cpp  VkRenderContext.hpp  VkRenderManager.cpp  VkRenderManager.hpp  VkRenderer.cpp  VkRenderer.hpp  VkUtil.cpp  VkUtil.hpp  Vulkan.cmake  compile.bat  test_shader.frag
HellfireControl/src/Platform/Windows/: WinConsole.cpp  WinConsole.hpp  WinDialogEventHandler.cpp  WinDialogEventHandler.hpp  WinFileDialog.cpp  WinFileDialog.hpp  WinVkSurface.hpp  WinWindow.cpp  WinWindow.hpp  Windows.cmake
Hephaestus/: CMakeLists.txt
Hephaestus/src/Torchlight/: Torchlight.cpp
Hephaestus/src/Torchlight/Core/: UICreationToolApplication.cpp  UICreationToolApplication.hpp
Hephaestus/src/Torchlight/Util/: FontHelper.hpp  FontProcessor.cpp  FontProcessor.hpp  FontTypes.cpp  FontTypes.hpp  FontUtil.cpp  FontUtil.hpp
source/: CMakeLists.txt  Main.cpp
source/HCMath/: HCMatrix.h  HCVector.cpp  HCVector.h  Vector.cpp  Vector.h
source/math/: Vector.cpp
